Build & library updates for Java 11
Need to include JAXB libs ourselves as Java 11 no longer includes them.
Also, updated the jide-common jar to the official release, suitable for
both Java 8 & Java 11.
Renamed files, build targets, etc to reflect that we are targeting
Java 11 instead of Java 9 or 10.
Renamed files, etc to reference Java 11 instead of 9, 10.
Updated launcher scripts for extra classpath-loaded jars and more
uniform CLI (as much as possible).  Updated READMEs.