@@ -26,14 +26,14 @@ import org.apache.tools.ant.filters.ReplaceTokens
 ext.moduleName = 'org.igv'
 ext.mainClassName = 'org.broad.igv.ui.Main'
 
-// Put the Java 9 build into a special dir to avoid accidental collisions.
-// Despite this, it is recommended that Java 8 vs. 9 builds be run in different locations.
-buildDir = 'build_java9' 
+// Put the Java 11 build into a special dir to avoid accidental collisions.
+// Despite this, it is recommended that Java 8 vs. 11 builds be run in different locations.
+buildDir = 'build_java11'
 
 sourceSets {
     main {
         java {
-            srcDirs = ['src/main/java', 'src/main/java9']
+            srcDirs = ['src/main/java', 'src/main/java11']
         }
         resources {
             srcDirs = ['src/main/resources', 'src/main/resources-jlfgr-1_0']
@@ -41,19 +41,26 @@ sourceSets {
         }
     }
 }
+configurations {
+    jarsForClasspath
+}
 
 dependencies {
-    // Use the newer JIDE lib for Java 9 builds
-    compile fileTree(dir: 'lib', include: '*.jar', exclude: 'jide-oss-3.5.5.jar') + fileTree(dir: 'lib_java9', include: '*.jar')
+    // Exclude the JAXB Core & Runtime jars from the module path and instead load them on the classpath in 
+    // order to avoid issues with split-packages.
+    jarsForClasspath fileTree(dir: 'lib_java11', include: ['jaxb-core-2.3.0.1.jar', 'jaxb-runtime-2.3.0.1.jar'])
+    compile fileTree(dir: 'lib', include: '*.jar') + fileTree(dir: 'lib_java11', include: '*.jar') - configurations.jarsForClasspath
     testCompile fileTree(dir: 'test/lib', include: '*.jar')
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.4.1'
+    gradleVersion = '4.10.1'
 }
 
-sourceCompatibility = 1.9
-targetCompatibility = 1.9
+// Gradle bug prevents us from generating Java 11 bytecode: https://github.com/gradle/gradle/issues/5120
+// Workaround is to target Java 10 for now.
+sourceCompatibility = 10
+targetCompatibility = 10
 
 processResources {
     // Set the current timestamp for release builds; pass in a blank property to enable (i.e. -Ptimestamp="" at CLI)
@@ -98,7 +105,7 @@ compileJava {
         options.compilerArgs = [
             '--module-path', classpath.asPath,
         ]
-        classpath = files()
+        classpath = configurations.jarsForClasspath
     }
 }
 
@@ -121,7 +128,7 @@ compileTestJava {
             '--add-modules', 'fest.swing',
             '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath, 
         ]
-        classpath = files()
+        classpath = configurations.jarsForClasspath
     }
 }
 
@@ -129,26 +136,26 @@ test {
     inputs.property("moduleName", moduleName)
     doFirst {
         jvmArgs = [
+            '-Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize',
             '--module-path',  classpath.asPath, 
             '--add-modules', 'junit', 
             '--add-modules', 'fest.swing', 
-            '--add-modules', 'java.xml.bind', 
             '--add-modules', 'ALL-MODULE-PATH',
             '--add-reads', "$moduleName=junit", 
             '--add-reads', "$moduleName=fest.swing",
-            '@scripts/java9/test_suite.args',
+            '@scripts/java11/test_suite.args',
             '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir, sourceSets.main.output.resourcesDir).asPath, 
         ]
-        classpath = files()
+        classpath = configurations.jarsForClasspath
     }
 }
 
 task createDist(type: Copy, dependsOn: jar)  {
-    from ('scripts/java9') {
+    from ('scripts/java11') {
         include 'igv.bat'
         include 'igv.command'
         include 'igv.sh'
-        include 'igv_hidpi.*'
+        include 'igv_hidpi.sh'
         include 'igv.args'
         include 'readme.txt'
     }
@@ -156,26 +163,36 @@ task createDist(type: Copy, dependsOn: jar)  {
     with copySpec {
         from ("lib") {
             include '*.jar'
-            exclude 'jide-oss-3.5.5.jar'
         }
-        from ("lib_java9") {
+        from ("lib_java11") {
             include '*.jar'
+            exclude 'jaxb-core-2.3.0.1.jar'
+            exclude 'jaxb-runtime-2.3.0.1.jar'
         }
         from ("${buildDir}/libs") {
             include 'igv.jar'
         }
+        
         into "lib"
+    }
+    
+    with copySpec {
+        from ("lib_java11") {
+            include 'jaxb-core-2.3.0.1.jar'
+            include 'jaxb-runtime-2.3.0.1.jar'
+        }
+        into "lib_classpath"
     }
 
     into "${buildDir}/IGV-dist"
 }
 
 task createDistZip(type: Zip, dependsOn: createDist) {
-    archiveName = "IGV_${version}_java10.zip"
+    archiveName = "IGV_${version}_java11.zip"
     destinationDir = file("${buildDir}/distZip")
     baseName = "IGV"
     from "${buildDir}/IGV-dist" exclude "*.bat"
-    into createDistZip.baseName + "_${version}_java10"
+    into createDistZip.baseName + "_${version}_java11"
 
     doLast {
         project.exec { commandLine('chmod', '775', createDistZip.archivePath ) }
@@ -185,28 +202,32 @@ task createDistZip(type: Zip, dependsOn: createDist) {
 task createMacDist(type: Copy, dependsOn: createDist) {
     with copySpec {
         from ("scripts/mac.app") exclude "Contents/Info.plist.template"
-        into "IGV_${version}_java10.app"
+        into "IGV_${version}_java11.app"
     }
     with copySpec {
-        from ("scripts/java9/Info.plist.template")
+        from ("scripts/java11/Info.plist.template")
         filter (ReplaceTokens, tokens: [ VERSION: version ])
         rename "Info.plist.template", "Info.plist"
-        into "IGV_${version}_java10.app/Contents"
+        into "IGV_${version}_java11.app/Contents"
     }
     with copySpec {
         from ("${buildDir}/IGV-dist/lib") include '*.jar'
-        into "IGV_${version}_java10.app/Contents/Java"
+        into "IGV_${version}_java11.app/Contents/Java/lib"
+    }
+    with copySpec {
+        from ("${buildDir}/IGV-dist/lib_classpath") include '*.jar'
+        into "IGV_${version}_java11.app/Contents/Java/lib_classpath"
     }
 
     into "${buildDir}/IGV-Mac-dist"
 
     doLast {
-        project.exec { commandLine('chmod', '775', "${buildDir}/IGV-Mac-dist/IGV_${version}_java10.app" ) }
+        project.exec { commandLine('chmod', '775', "${buildDir}/IGV-Mac-dist/IGV_${version}_java11.app" ) }
     }
 }
 
 task createMacDistZip(type: Zip, dependsOn: createMacDist) {
-    archiveName = "IGV_${version}_java10.app.zip"
+    archiveName = "IGV_${version}_java11.app.zip"
     destinationDir = file("${buildDir}/distZip")
     from "${buildDir}/IGV-Mac-dist"
     
@@ -216,14 +237,14 @@ task createMacDistZip(type: Zip, dependsOn: createMacDist) {
 }
 
 task createWinDistZip(type: Zip, dependsOn: createDist) {
-    archiveName = "IGV_Win_${version}_java10.zip"
+    archiveName = "IGV_Win_${version}_java11.zip"
     destinationDir = file("${buildDir}/distZip")
     baseName = "IGV_Win"
     from("${buildDir}/IGV-dist") {
         exclude "*.sh"
         exclude "igv.command"
     }
-    into createWinDistZip.baseName + "_${version}_java10"
+    into createWinDistZip.baseName + "_${version}_java11"
 
     doLast {
         project.exec { commandLine('chmod', '775', createWinDistZip.archivePath ) }
@@ -231,7 +252,7 @@ task createWinDistZip(type: Zip, dependsOn: createDist) {
 }
 
 task createToolsDist(type: Copy, dependsOn: tooljar)  {
-    from ("scripts/java9") {
+    from ("scripts/java11") {
         include 'igvtools*'
         include 'igvtools*.bat'
         include 'igvtools*.command'
@@ -244,12 +265,21 @@ task createToolsDist(type: Copy, dependsOn: tooljar)  {
         }
         from ("lib") {
             include '*.jar'
-            exclude 'jide-oss-3.5.5.jar'
         }
-        from ("lib_java9") {
+        from ("lib_java11") {
             include '*.jar'
+            exclude 'jaxb-core-2.3.0.1.jar'
+            exclude 'jaxb-runtime-2.3.0.1.jar'
         }
         into "lib"
+    }
+    
+    with copySpec {
+        from ("lib_java11") {
+            include 'jaxb-core-2.3.0.1.jar'
+            include 'jaxb-runtime-2.3.0.1.jar'
+        }
+        into "lib_classpath"
     }
 
     with copySpec { from ("genomes") { } into "genomes" }
@@ -258,12 +288,12 @@ task createToolsDist(type: Copy, dependsOn: tooljar)  {
 }
 
 task createToolsDistZip(type: Zip, dependsOn: createToolsDist) {
-    archiveName = "igvtools_${version}_java10.zip"
+    archiveName = "igvtools_${version}_java11.zip"
     destinationDir = file("${buildDir}/distZip")
-    baseName = "IGVTools_java10"
+    baseName = "IGVTools"
     
     from "${buildDir}/IGVTools-dist"
-    into createToolsDistZip.baseName
+    into createToolsDistZip.baseName + "_${version}_java11"
 
     doLast {
         project.exec { commandLine('chmod', '775', createToolsDistZip.archivePath ) }
